2008-07-23  Alper KANAT  <alperkanat@gmail.com>

	* blog/admin.py, comments/admin.py: Corrected some syntax errors and
	missing imports..
	* frontpage/admin.py, frontpage/models.py: Forgot to add the inline forms
	for the links model..
	* blog/admin.py, frontpage/admin.py, comments/admin.py, tags/admin.py:
	Created admin interfaces for some of the applications.. class Admin in
	models.py is no longer used..
	* blog/models.py, frontpage/models.py, comments/models.py, tags/models.py:
	Removed some obsolote code that has been changed with the admin
	interface..
	* urls.py: Admin site is now imported from elsewhere..
	* raptiye: This shouldn't be in the code base..
	
2008-07-20  Alper KANAT  <alperkanat@gmail.com>

	* Committing the project to its own server for the first time..

2008-07-16  Alper KANAT  <alperkanat@gmail.com>

	* extra/tag_cloud.py: Fixed a small bug that occurs when a small number of
	tags exist.
	* templates/users/profile.html: Profile avatar shows the gravatar when
	gravatar url entered.

2008-07-08  Alper KANAT  <alperkanat@gmail.com>

	* extra/tag_cloud.py: Fixed a small bug that occurs when no tag exist.
	* settings_.py: Forgot to add tags app and DEFAULT_AVATAR variable to
	settings.py

2008-07-05  Alper KANAT  <alperkanat@gmail.com>

	* media/css/style.css, blog/templatetags/blog_filters.py,
	templates/blog/homepage.html, templates/blog/pagination.html: Pagination
	works very well now..

2008-07-04  Alper KANAT  <alperkanat@gmail.com>

	* extra/search.py, extra/messages.py, blog/views.py, blog/urls.py,
	templates/blog/sidebar.html: Search works! :)

2008-07-02  Alper KANAT  <alperkanat@gmail.com>

	* media/images/badges, templates/blog/supported.html: All badges are now
	stored on the localhost.. Some of them are renewed and some are deleted..
	* media/js/ibox: iBox is used for JS dialogs.. Nice :)
	* media/css/style.css, users/views.py, users/urls.py,
	templates/users/profile.html: Profile is complete now!