@@ -48,7 +48,7 @@ def get_month_and_year():
 	# creating a pytz info object for true utc time..
 	tz = timezone(settings.TIME_ZONE)
 	now = datetime.now(tz)
-	calendar = LocaleTextCalendar()
+	calendar = LocaleTextCalendar(0, settings.LOCALE)
 	return "%s" % calendar.formatmonthname(now.year, now.month, 0)
 
 @register.simple_tag
@@ -58,7 +58,7 @@ def construct_calendar():
 	# creating a pytz info object for true utc time..
 	tz = timezone(settings.TIME_ZONE)
 	now = datetime.now(tz)
-	wc = WebCalendar(now.year, now.month, now.day, Entry, "datetime")
+	wc = WebCalendar(now.year, now.month, now.day, Entry, "datetime", settings.LOCALE)
 	return wc.render("calendar_box", "/blog", u"bu tarihte yazılmış yazıları görmek için tıklayın..", "ulink")
 
 @register.inclusion_tag('blog/pagination.html', takes_context=True)
